test/tests/packages/lets_nonconst/nonconst.txt
error: expected a constant expression
 --> <packages/nonconstpkg/constants.tql>:1:10
  |
1 | let $x = foo
  |          ^^^ 
  |
